# enpm605_gp2

./: .gitignore
group2_gp2/: README.md  cancellation_demo.webm  package.xml  setup.cfg  setup.py
group2_gp2/config/: goals.yaml
group2_gp2/group2_gp2/: navigate_to_goal_client.py  navigate_to_goal_server.py  package.xml  setup.py
group2_gp2/group2_gp2/group2_gp2/: navigate_to_goal_client.py  navigate_to_goal_server.py
group2_gp2/group2_gp2/launch/: gp2.launch.py
group2_gp2/group2_gp2/scripts/: main_navigate_to_goal_client.py  main_navigate_to_goal_server.py
group2_gp2/launch/: gp2.launch.py
group2_gp2_interfaces/: CMakeLists.txt  package.xml
group2_gp2_interfaces/action/: NavigateToGoal.action
log/: latest_build
