<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>group2_gp2_interfaces</name>
  <version>0.0.0</version>
  <description>ROS 2 action interface package for GP2 navigate-to-goal action</description>
  <maintainer email="maxyk@umd.edu">maxyk</maintainer>
  <maintainer email="gfacchet@terpmail.umd.edu">namfacchetti</maintainer>  
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>geometry_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
